tests/parsing/smtlib/v2.7/errors/042_term_surprise_str_1.smt2
(set-logic ALL)
(assert ("bla"))
